--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
+<!DOCTYPE html>
 <html>
-  <head>
-  </head>
-  <body>
-  <h1> hello </h1>
-  </body>
+    <head>
+        <link rel="stylesheet" href="styles/tailwind.css">
+        <link rel="stylesheet" href="styles/hover.css">
+        <link rel="stylesheet" href="styles/style.css"
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <div class="h-screen flex flex-col bg-tanah-brown items-center">
+            <h1 class="lg:text-2xl md:text-2xl sm:text-4xl">please help</h1>
+        </div>
+    </body>
 </html>
