--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="h-screen flex flex-col bg-tanah-brown items-center">
-            <h1 class="lg:text-2xl md:text-2xl sm:text-4xl">please help</h1>
+            <h1 class="text-4xl md:text-sm">123</h1>
         </div>
     </body>
 </html>
