--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     </head>
     <body>
         <div class="h-screen flex flex-col bg-tanah-brown items-center">
-            <h1 class="text-5xl lg:text-3xl">123</h1>
+            <marquee class=""></marquee>
+            <h1 class="text-6xl lg:text-3xl bg-tanah-light-brown px-6 rounded-2xl my-2 tanahFont">חדשות רות</h1>
+            <div class="bg-gray-300 w-1/3 ">
+                <h1 class="text-5xl"></h1>
+            </div>
         </div>
     </body>
 </html>
