--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div class="h-screen flex flex-col bg-tanah-brown items-center">
             <marquee class="overflow-hidden text-5xl lg:text-2xl lg:h-8"><p class="inline">1</p><p class="inline">2</p></marquee>
             <h1 class="text-6xl lg:text-3xl bg-tanah-light-brown px-6 rounded-2xl my-2 tanahFont">חדשות רות</h1>
+            <h1>Check check sex</h1>
             <div class="bg-gray-300 w-1/3 ">
                 <h1 class="text-5xl"></h1>
             </div>
