--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
     </head>
     <body>
         <div class="h-screen flex flex-col bg-tanah-brown items-center">
-            <marquee class="overflow-hidden text-5xl lg:text-2xl lg:h-8"><p class="inline">1</p><p class="inline">2</p></marquee>
+            <marquee class="overflow-hidden text-5xl lg:text-2xl lg:h-8"><p class="inline tanahFont" style="direction: rtl;"><span>10</span> שנים מאז פטירתו של אלימלך מבית לחם נפטרו שני בניו.</p></marquee>
             <h1 class="text-6xl lg:text-3xl bg-tanah-light-brown px-6 rounded-2xl my-2 tanahFont">חדשות רות</h1>
-            <h1>Check check sex</h1>
-            <div class="bg-gray-300 w-1/3 ">
-                <h1 class="text-5xl"></h1>
+            <div class="bg-gray-300 w-1/2 lg:w-1/3 pr-3">
+                <h1 class="text-6xl lg:text-4xl tanahFont underline" style="direction: rtl;"><span>10</span> שנים מאז פטירתו של אלימלך מבית לחם נפטרו שני בניו.</h1>
+                <p class="text-5xl lg:text-2xl tanahFont font-light" style="direction: rtl;">היום נודע לנו ששני בניו של אלימלך מבית לחם נפטרו.</p>
+                <p class="text-5xl lg:text-2xl tanahFont font-light" style="direction: rtl;">איך כלותיה של נעמי הגיבו?</p>
+                <img src="img/1.jpg" class="mx-auto">
+            </div>
+            <div class="bg-gray-300 w-1/2 lg:w-1/3 pr-3 mt-40">
+                <h1 class="text-6xl lg:text-4xl tanahFont underline" style="direction: rtl;"><span>10</span> שנים מאז פטירתו של אלימלך מבית לחם נפטרו שני בניו.</h1>
+                <p class="text-5xl lg:text-2xl tanahFont font-light" style="direction: rtl;">היום נודע לנו ששני בניו של אלימלך מבית לחם נפטרו.</p>
+                <p class="text-5xl lg:text-2xl tanahFont font-light" style="direction: rtl;">איך כלותיה של נעמי הגיבו?</p>
             </div>
         </div>
     </body>
