--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div class="min-h-screen flex flex-col bg-tanah-brown items-center">
+        <div class="max-h-screen flex flex-col bg-tanah-brown items-center">
             <marquee class="overflow-hidden text-5xl lg:text-2xl lg:h-8"><p class="inline tanahFont" style="direction: rtl;"><span>10</span> שנים מאז פטירתו של אלימלך מבית לחם נפטרו שני בניו.</p></marquee>
             <h1 class="text-6xl lg:text-3xl bg-tanah-light-brown px-6 rounded-2xl my-2 tanahFont">חדשות רות</h1>
             <div class="bg-gray-300 w-1/2 lg:w-1/3 pr-3">
