--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <link rel="stylesheet" href="styles/tailwind.css">
         <link rel="stylesheet" href="styles/hover.css">
-        <link rel="stylesheet" href="styles/style.css"
+        <link rel="stylesheet" href="styles/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div class="max-h-screen flex flex-col bg-tanah-brown items-center">
+        <div class="max-h-screen lg:h-screen flex flex-col bg-tanah-brown items-center">
             <marquee class="overflow-hidden text-5xl lg:text-2xl lg:h-8"><p class="inline tanahFont" style="direction: rtl;"><span>10</span> שנים מאז פטירתו של אלימלך מבית לחם נפטרו שני בניו.</p></marquee>
             <h1 class="text-6xl lg:text-3xl bg-tanah-light-brown px-6 rounded-2xl my-2 tanahFont">חדשות רות</h1>
             <div class="bg-gray-300 w-1/2 lg:w-1/3 pr-3">
@@ -15,6 +15,7 @@
                 <p class="text-5xl lg:text-2xl tanahFont font-light" style="direction: rtl;">היום נודע לנו ששני בניו של אלימלך מבית לחם נפטרו.</p>
                 <p class="text-5xl lg:text-2xl tanahFont font-light" style="direction: rtl;">איך כלותיה של נעמי הגיבו?</p>
                 <img src="img/1.jpg" class="mx-auto">
+                <p class="text-gray-300" style="direction: rtl;">לפני שבוע</p>
             </div>
             <div class="bg-gray-300 w-1/2 lg:w-1/3 pr-3 mt-40 mb-12">
                 <h1 class="text-6xl lg:text-4xl tanahFont underline" style="direction: rtl;"><span>10</span> שנים מאז פטירתו של אלימלך מבית לחם נפטרו שני בניו.</h1>
