--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="w-screen lg:h-screen flex flex-col bg-tanah-brown items-center">
             <marquee class="overflow-hidden text-5xl lg:text-2xl lg:h-8"><p class="inline tanahFont" style="direction: rtl;"><span>10</span> שנים מאז פטירתו של אלימלך מבית לחם נפטרו שני בניו.</p></marquee>
             <h1 class="text-5xl lg:text-3xl bg-tanah-light-brown px-6 rounded-2xl my-2 tanahFont">חדשות רות</h1>
-            <div class="bg-gray-300 w-1/2 lg:w-1/3 pr-3">
+            <div class="bg-gray-300 w-full lg:w-1/2 pr-3">
                 <h1 class="text-4xl lg:text-4xl tanahFont underline" style="direction: rtl;"><span>10</span> שנים מאז פטירתו של אלימלך מבית לחם, נפטרו שני בניו.</h1>
                 <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;">היום נודע לנו ששני בניו של אלימלך מבית לחם נפטרו.</p>
                 <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;">איך כלותיה של נעמי הגיבו?</p>
@@ -20,7 +20,7 @@
                 
                 <p class="text-gray-500" style="direction: rtl;">לפני שבוע</p>
             </div>
-            <div class="bg-gray-300 w-1/2 lg:w-1/3 pr-3 mt-40 mb-12">
+            <div class="bg-gray-300 w-full lg:w-1/2 pr-3 mt-12 lg:mt-40 mb-12">
                 <h1 class="text-4xl lg:text-4xl tanahFont underline" style="direction: rtl;"><span>10</span> שנים מאז פטירתו של אלימלך מבית לחם נפטרו שני בניו.</h1>
                 <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;">היום נודע לנו ששני בניו של אלימלך מבית לחם נפטרו.</p>
                 <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;">איך כלותיה של נעמי הגיבו?</p>
