--- a/index.html
+++ b/index.html
@@ -7,23 +7,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div class="w-screen lg:h-screen flex flex-col bg-tanah-brown items-center">
+        <div class="w-screen flex flex-col bg-tanah-brown items-center">
             <marquee class="overflow-hidden text-5xl lg:text-2xl lg:h-8"><p class="inline tanahFont" style="direction: rtl;"><span>10</span> שנים מאז פטירתו של אלימלך מבית לחם נפטרו שני בניו.</p></marquee>
             <h1 class="text-5xl lg:text-3xl bg-tanah-light-brown px-6 rounded-2xl my-2 tanahFont">חדשות רות</h1>
             <div class="bg-gray-300 w-full lg:w-1/2 pr-3">
                 <h1 class="text-4xl lg:text-4xl tanahFont underline" style="direction: rtl;"><span>10</span> שנים מאז פטירתו של אלימלך מבית לחם, נפטרו שני בניו.</h1>
-                <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;">היום נודע לנו ששני בניו של אלימלך מבית לחם נפטרו.</p>
+                <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;">היום נודע לנו בצער רב ששני בניו של אלימלך מבית לחם נפטרו.</p>
                 <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;">איך כלותיה של נעמי הגיבו?</p>
+                <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;">.ממה שידוע לנו עד כה, ערפה כלתו של כיליון ז"ל החליטה לחזור לבית אמא ונפרדת בבכי מנעמי ורות אחותה</p>
+                <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;">לעומת זאת רות אחותה של נעמי מחליטה להישאר עם נעמי וחוזרת יחד איתה לארץ יהודה</p>
+                <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;"></p>
                 <div class="flex justify-center w-full">
                     <img src="img/1.jpg" class="mx-auto">
                 </div>
                 
                 <p class="text-gray-500" style="direction: rtl;">לפני שבוע</p>
             </div>
-            <div class="bg-gray-300 w-full lg:w-1/2 pr-3 mt-12 lg:mt-40 mb-12">
-                <h1 class="text-4xl lg:text-4xl tanahFont underline" style="direction: rtl;"><span>10</span> שנים מאז פטירתו של אלימלך מבית לחם נפטרו שני בניו.</h1>
-                <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;">היום נודע לנו ששני בניו של אלימלך מבית לחם נפטרו.</p>
-                <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;">איך כלותיה של נעמי הגיבו?</p>
+            <div class="bg-gray-300 w-full lg:w-1/2 pr-3 mt-8 lg:mt-10 mb-12">
+                <h1 class="text-4xl lg:text-4xl tanahFont underline" style="direction: rtl;">חדשות טובות: רות כלתה של נעמי מתחתנת.</h1>
+                <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;">רות אשר איבדה את בעלה לפני שבוע החליטה להתחתן עם בועז איש גיבור חיל, גם בועז ממשפחת אלימלך</p>
+                <p class="text-3xl lg:text-2xl tanahFont font-light" style="direction: rtl;">זהו סיפור אהבה מאוד מרגש בועז היה בעל שדות בבית לחם הוא היה איש טוב, רות הלכה לשדה ושם פגשה את בועז וניסתה למצוא חן בעייניו. בועז שואל את האחראי על הקוצרים מי היא האישה שמלקטת בשדה והוא עונה לו שזו נערה מואביה ששבה עם נעמי משדה מואב
+                , בועז ניגש לרות ואומר לה שלא תלך ללקט באף שדה אחר ושאם היא צמאה שתלך לשתות מאיפה ששותים העובדים.
+            רות מתרחצת ושמה שמלה כדי להיות הכי יפה שהיא יכולה והיא הולכת בשקט אל המקום שבו בועז ישן ונשכבת לידו במיטה, בועז מתעורר משינתו בלילה ורואה אישה שוכבת איתו במיטה. בועז מופתע ושואל מי היא רות עונה לו ואומרת לו שהוא הגואל שלה. בועז מחליט להתחתן איתה ולגאול אותה. לאחר זמן מה נולד להם בן בשם עובד.</p>
+                
                 <p class="text-gray-500" style="direction: rtl;">לפני שעה</p>
             </div>
         </div>
